@@ -1,3 +1,6 @@
+2010-09-23 Graeme Gott <graeme@gottcode.org>
+	* FIXED: Rotating a square piece shifted it.
+
 2008-06-18 Graeme Gott <graeme@gottcode.org>
 	* Tag version 1.0.3.
 
